[fix] Align icon

--- a/src/Search/SearchBar/SearchBar.module.scss
+++ b/src/Search/SearchBar/SearchBar.module.scss
@@ -30,6 +30,9 @@
     background-color: #1266f1;
 
     text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
     cursor: pointer;
 
